--- a/softwerkskammer/lib/site/views/credits.pug
+++ b/softwerkskammer/lib/site/views/credits.pug
@@ -94,7 +94,7 @@ block content
         +defItem('Lo-Dash "_"', 'http://lodash.com', 'Funktionale Erweiterungen, synchron')
         +defItem('Ramda', 'http://ramdajs.com', '"A practical functional library for Javascript programmers."')
         +defItem('"_s"', 'http://epeli.github.com/underscore.string/', 'String Erweiterungen')
-        +defItem('Moment', 'http://momentjs.com/', 'Datum und Uhrzeit leicht gemacht')
+        +defItem('Luxon', 'https://moment.github.io/luxon/index.html', 'Datum und Uhrzeit leicht gemacht')
 
       h2 Dev/Build/Test
       dl.row
