fix edit date behaviour for en-GB language

--- a/softwerkskammer/lib/activities/views/edit.pug
+++ b/softwerkskammer/lib/activities/views/edit.pug
@@ -10,11 +10,10 @@ block content
 
 block scripts
   +map(activity.location())
-  script $('#location').change(function() {showLocation($('#location').val())})
+  script $('#location').change(function () {showLocation($('#location').val())})
   script(src='/clientscripts/bootstrap-datepicker.min.js')
   script(src='/clientscripts/simple-timepicker.min.js')
-  if language === 'de'
-    script(src='/clientscripts/bootstrap-datepicker.de.min.js')
+  script(src='/clientscripts/bootstrap-datepicker.' + language + '.min.js')
   script(src='/clientscripts/activityDateModel.js')
   script(src='/clientscripts/activityform-dateAdapter.js')
   script(src='/clientscripts/check-activityform.js')
