--- a/softwerkskammer/views/layoutComponents.pug
+++ b/softwerkskammer/views/layoutComponents.pug
@@ -53,7 +53,7 @@ mixin loginMenu(forInline)
         | &nbsp;#{t('general.feedback')}
       li: include ../version
   if language === 'de'
-    +languageEntry(forInline, 'en-gb', 'switch to English', 'United-Kingdom.png')
+    +languageEntry(forInline, 'en-GB', 'switch to English', 'United-Kingdom.png')
   else
     +languageEntry(forInline, 'de', 'auf Deutsch umschalten', 'Germany.png')
 
