cleaning package.json

--- a/softwerkskammer/lib/site/views/credits.pug
+++ b/softwerkskammer/lib/site/views/credits.pug
@@ -91,9 +91,7 @@ block content
       h2 Allgemeine Bibliotheken
       dl.row
         +defItem('Async', 'https://github.com/caolan/async', 'Funktionale Erweiterungen, asynchron')
-        +defItem('Lo-Dash "_"', 'http://lodash.com', 'Funktionale Erweiterungen, synchron')
         +defItem('Ramda', 'http://ramdajs.com', '"A practical functional library for Javascript programmers."')
-        +defItem('"_s"', 'http://epeli.github.com/underscore.string/', 'String Erweiterungen')
         +defItem('Luxon', 'https://moment.github.io/luxon/index.html', 'Datum und Uhrzeit leicht gemacht')
 
       h2 Dev/Build/Test
@@ -101,7 +99,7 @@ block content
         +defItem('Grunt', 'http://gruntjs.com', 'Build-Runner')
         +defItem('ESLint (grunt)', 'https://github.com/sindresorhus/grunt-eslint', 'Grunt Integration für ESLint')
         +defItem('Puglint (grunt)', 'https://github.com/mrmlnc/grunt-puglint', 'Grunt Integration für pug-lint')
-        +defItem('Grunt Less', 'https://github.com/gruntjs/grunt-contrib-less', 'Grunt Integration für LESS Compilierung')
+        +defItem('Grunt Sass', 'https://github.com/gruntjs/grunt-contrib-sass', 'Grunt Integration für SASS Compilierung')
         +defItem('Grunt Uglify', 'https://github.com/gruntjs/grunt-contrib-uglify', 'Grunt Minifizierung für JS-Files')
         +defItem('Grunt Mocha Istanbul', 'https://github.com/pocesar/grunt-mocha-istanbul', 'Mocha Tests im Grunt + Coverage')
         +defItem('Must', 'https://github.com/moll/js-must', 'BDD TDD Assertion Library')
