--- a/softwerkskammer/lib/site/views/loginDialog.pug
+++ b/softwerkskammer/lib/site/views/loginDialog.pug
@@ -31,16 +31,16 @@
           #userPass.collapse(class=(loginChoice.userPass ? 'show' : ''))
             .row
               .col-6
-                label.control-label(for='email') Email:
+                label.control-label(for='email') #{t('member.email')}:
                 input.form-control.trim-text(id='email', type='email', name='email', value='', placeholder='myaddress@example.com')
               .col-6
                 .form-group
-                  label.control-label(for='password') Password:
+                  label.control-label(for='password') #{t('authentication.password')}:
                   input#password.form-control.trim-text(type='password', name='password', value='', placeholder='enter "NEW" for new user')
             .row
               .col-12
                 .btn-group.float-right
-                  button.btn.btn-primary(type='submit') Anmelden
+                  button.btn.btn-primary(type='submit') #{t('general.save')}
 
   .row
     .col-12
