--- a/softwerkskammer/lib/site/views/loginDialog.pug
+++ b/softwerkskammer/lib/site/views/loginDialog.pug
@@ -23,24 +23,25 @@
   .row
     .col-12
       p &nbsp;
-      form(action='/auth/login', method='post')
+      form#passwordform(action='/auth/login?returnTo=' + encodeURIComponent(returnUrl), method='post')
         input(type='hidden', name='_csrf', value=csrf_token)
         .card.mb-2
           h5.card-header.p-2(class=(loginChoice.userPass ? 'alert-success' : 'bg-light'))
             a.inherit-color(href='#userPass', data-toggle='collapse') #{t('authentication.user_pass')}:
           #userPass.collapse(class=(loginChoice.userPass ? 'show' : ''))
+            | !{t('authentication.user_pass_info_text', { postProcess: 'pug' })}
             .row
               .col-6
-                label.control-label(for='email') #{t('member.email')}:
+                label.control-label(for='email') #{t('members.email')}:
                 input#email.form-control.trim-text(type='email', name='email', value='', placeholder='myaddress@example.com')
               .col-6
                 .form-group
                   label.control-label(for='password') #{t('authentication.password')}:
-                  input#password.form-control.trim-text(type='password', name='password', value='', placeholder='enter "NEW" for new user')
+                  input#password.form-control.trim-text(type='password', name='password', value='')
             .row
               .col-12
                 .btn-group.float-right
-                  button.btn.btn-primary(type='submit') #{t('general.save')}
+                  button.btn.btn-primary(type='submit') #{t('authentication.authenticate')}
 
   .row
     .col-12
@@ -67,3 +68,37 @@
               input.form-control#magicLinkEmail(type='email', name='magic_link_email', value='', placeholder='myaddress@example.com')
               .input-group-append
                 button.btn.btn-light(type='submit') #{t('authentication.magic_link_request')}
+
+script.
+  $(document).ready(function () {
+    user_validator = $('#passwordform').validate({
+      rules: {
+        email: {required: true, email: true},
+        password: {
+          required: true,
+          minlength: 5
+        }
+      },
+      errorPlacement: function (error, element) { error.insertAfter(element); },
+      errorElement: 'span',
+      errorClass: 'help-block text-danger',
+      highlight: function (element) { $(element).addClass('is-invalid'); },
+      unhighlight: function (element) { $(element).removeClass('is-invalid'); }
+    });
+
+    user_validator.form();
+
+    function handler(each) {
+      return function () {
+        user_validator.element(each);
+      };
+    }
+
+    ['#passwordform [name=email]', '#passwordform [name=password]'].forEach(
+      function (each) {
+        $(each).change(handler(each));
+        $(each).keyup(handler(each));
+      }
+    );
+    user_validator.form();
+  });
