Add hint to offer contact information
As the message send via "contact the contact persons of group" is
anonymous people should add contact information in case the want to be
contacted.

--- a/softwerkskammer/lib/mailsender/views/mailsender-forms.pug
+++ b/softwerkskammer/lib/mailsender/views/mailsender-forms.pug
@@ -17,6 +17,7 @@ mixin mailform(message, regionalgroups, themegroups, massMailing, contactPersons
             +checkbox('toParticipants', t('mailsender.to_participants'), false, 'toParticipants')
           if (contactPersons)
             +text('contactPersonsGroupName', t('mailsender.to_contact_persons'), contactPersons.groupName, '', '', true)
+            p #{t('mailsender.to_contact_persons_leave_contact_information_hint')}
           if (message.receiver)
             +text('nickname', t('mailsender.to_member'), message.receiver.nickname(), '', '', true)
           +text('subject', t('mailsender.subject'), message.subject)
