Experimental password login dialog.

--- a/softwerkskammer/lib/site/views/loginDialog.pug
+++ b/softwerkskammer/lib/site/views/loginDialog.pug
@@ -29,19 +29,51 @@
           h5.card-header.p-2(class=(loginChoice.userPass ? 'alert-success' : 'bg-light'))
             a.inherit-color(href='#userPass', data-toggle='collapse') #{t('authentication.user_pass')}:
           #userPass.collapse(class=(loginChoice.userPass ? 'show' : ''))
-            | !{t('authentication.user_pass_info_text', { postProcess: 'pug' })}
-            .row
-              .col-6
-                label.control-label(for='email') #{t('members.email')}:
-                input#email.form-control.trim-text(type='email', name='email', value='', placeholder='myaddress@example.com')
-              .col-6
-                .form-group
-                  label.control-label(for='password') #{t('authentication.password')}:
-                  input#password.form-control.trim-text(type='password', name='password', value='')
-            .row
-              .col-12
-                .btn-group.float-right
-                  button.btn.btn-primary(type='submit') #{t('authentication.authenticate')}
+            ul#passwordTab(class='nav nav-tabs', role='tablist')
+              li(class='nav-item')
+                a#sign-in(class='nav-link active', data-toggle='tab', href='#sign-in-contents', role='tab')
+                  | Einloggen
+              li(class='nav-item')
+                a#sign-up(class='nav-link active', data-toggle='tab', href='#sign-up-contents', role='tab')
+                  | Neu anmelden
+              li(class='nav-item')
+                a#add-to-existing(class='nav-link active', data-toggle='tab', href='#add-to-existing-contents', role='tab')
+                  | Passwort zufügen
+
+            div#passwordTabContents(class='tab-content')
+              div#sign-in-contents(class='tab-pane fade show active', role='tabpanel')
+                | Zum Einloggen gib Deine hinterlegte E-Mail-Adresse und Dein Passwort ein:
+                .row
+                  .col-6
+                    label.control-label(for='sign-in-email') #{t('members.email')}:
+                    input#sign-in-email.form-control.trim-text(type='email', name='email', value='', placeholder='myaddress@example.com')
+                  .col-6
+                    .form-group
+                      label.control-label(for='sign-in-password') #{t('authentication.password')}:
+                      input#sign-in-password.form-control.trim-text(type='password', name='password', value='')
+                .row
+                  .col-12
+                    .btn-group.float-right
+                      button.btn.btn-primary(type='submit') #{t('Einloggen')}
+
+              div#sign-up-contents(class='tab-pane fade', role='tabpanel')
+                | Um Dich als neues Mitglied zu registireren, gib die zu verwendende E-Mail-Adresse sowie Dein gewünschtes Passwort ein:
+                .row
+                  .col-6
+                    label.control-label(for='sign-up-email') #{t('members.email')}:
+                    input#sign-up-email.form-control.trim-text(type='email', name='email', value='', placeholder='myaddress@example.com')
+                  .col-6
+                    .form-group
+                      label.control-label(for='sign-up-password') #{t('authentication.password')}:
+                      input#sign-up-password.form-control.trim-text(type='password', name='password', value='')
+                .row
+                  .col-12
+                    .btn-group.float-right
+                      button.btn.btn-primary(type='submit') #{t('Anmelden')}
+
+              div#add-to-existing-contents(class='tab-pane fade', role='tabpanel')
+                | Um ein Passwort zu setzen, melde Dich zuerst mit Deiner bisherigen Authentifizierungsmethode an
+                | und füge dann über die 'Profil bearbeiten' Seite ein Passwort hinzu (ganz unten auf der Seite).
 
   .row
     .col-12
