Only activate one tab at a time...

--- a/softwerkskammer/lib/site/views/loginDialog.pug
+++ b/softwerkskammer/lib/site/views/loginDialog.pug
@@ -34,11 +34,11 @@
                 a#sign-in(class='nav-link active', data-toggle='tab', href='#sign-in-contents', role='tab')
                   | Einloggen
               li(class='nav-item')
-                a#sign-up(class='nav-link active', data-toggle='tab', href='#sign-up-contents', role='tab')
+                a#sign-up(class='nav-link', data-toggle='tab', href='#sign-up-contents', role='tab')
                   | Neu anmelden
               li(class='nav-item')
-                a#add-to-existing(class='nav-link active', data-toggle='tab', href='#add-to-existing-contents', role='tab')
-                  | Passwort zufügen
+                a#add-to-existing(class='nav-link', data-toggle='tab', href='#add-to-existing-contents', role='tab')
+                  | Passwort zu existierendem Account zufügen
 
             div#passwordTabContents(class='tab-content')
               div#sign-in-contents(class='tab-pane fade show active', role='tabpanel')
