--- a/softwerkskammer/lib/site/views/loginDialog.pug
+++ b/softwerkskammer/lib/site/views/loginDialog.pug
@@ -30,19 +30,19 @@
             ul#passwordTab.nav.nav-tabs
               li.nav-item
                 a#sign-in.nav-link.active(data-toggle='tab', href='#sign-in-contents')
-                  | Einloggen
+                  | #{t('authentication.sign_in')}
               li.nav-item
                 a#sign-up.nav-link(data-toggle='tab', href='#sign-up-contents')
-                  | Neu anmelden
+                  | #{t('authentication.sign_up')}
               li.nav-item
                 a#add-to-existing.nav-link(data-toggle='tab', href='#add-to-existing-contents')
-                  | Passwort zu existierendem Account zufügen
+                  | #{t('authentication.add_to_existing')}
 
             #passwordTabContents.tab-content
               #sign-in-contents.tab-pane.fade.show.active
                 form#passwordform-sign-in(action='/auth/login?returnTo=' + encodeURIComponent(returnUrl), method='post')
                   input(type='hidden', name='_csrf', value=csrf_token)
-                  | Zum Einloggen gib Deine hinterlegte E-Mail-Adresse und Dein Passwort ein:
+                  #{t('authentication.sign_in_text')}
                   .row
                     .col-6
                       label.control-label(for='sign-in-email') #{t('members.email')}:
@@ -54,12 +54,12 @@
                   .row
                     .col-12
                       .btn-group.float-right
-                        button.btn.btn-primary(type='submit', value='LOGIN') #{t('Einloggen')}
+                        button.btn.btn-primary(type='submit') #{t('authentication.sign_in_button')}
 
               #sign-up-contents.tab-pane.fade
                 form#passwordform-sign-up(action='/auth/login?returnTo=' + encodeURIComponent(returnUrl), method='post')
                   input(type='hidden', name='_csrf', value=csrf_token)
-                  | Um Dich als neues Mitglied zu registrieren, gib die zu verwendende E-Mail-Adresse sowie Dein gewünschtes Passwort ein:
+                  #{t('authentication.sign_up_text')}
                   .row
                     .col-6
                       label.control-label(for='sign-up-email') #{t('members.email')}:
@@ -71,11 +71,10 @@
                   .row
                     .col-12
                       .btn-group.float-right
-                        button.btn.btn-primary(type='submit') #{t('Anmelden')}
+                        button.btn.btn-primary(type='submit') #{t('authentication.sign_up_button')}
 
               #add-to-existing-contents.tab-pane.fade
-                | Um ein Passwort zu setzen, melde Dich zuerst mit Deiner bisherigen Authentifizierungsmethode an
-                | und füge dann über die 'Profil bearbeiten' Seite ein Passwort hinzu (ganz unten auf der Seite).
+                #{t('authentication.add_to_existing_text')}
 
   .row
     .col-12
