--- a/softwerkskammer/lib/site/views/loginDialog.pug
+++ b/softwerkskammer/lib/site/views/loginDialog.pug
@@ -43,7 +43,7 @@
               #sign-in-contents.tab-pane.fade.show.active
                 form#passwordform-sign-in(action='/auth/login?returnTo=' + encodeURIComponent(returnUrl), method='post')
                   input(type='hidden', name='_csrf', value=csrf_token)
-                  #{t('authentication.sign_in_text')}
+                  | #{t('authentication.sign_in_text')}
                   .row
                     .col-6
                       label.control-label(for='sign-in-email') #{t('members.email')}:
@@ -60,7 +60,7 @@
               #sign-up-contents.tab-pane.fade
                 form#passwordform-sign-up(action='/auth/login?returnTo=' + encodeURIComponent(returnUrl), method='post')
                   input(type='hidden', name='_csrf', value=csrf_token)
-                  #{t('authentication.sign_up_text')}
+                  | #{t('authentication.sign_up_text')}
                   .row
                     .col-6
                       label.control-label(for='sign-up-email') #{t('members.email')}:
@@ -75,7 +75,7 @@
                         button.btn.btn-primary(type='submit') #{t('authentication.sign_up_button')}
 
               #add-to-existing-contents.tab-pane.fade
-                #{t('authentication.add_to_existing_text')}
+                | #{t('authentication.add_to_existing_text')}
 
   .row
     .col-12
