We need two separate email+password URLs, one for login and one for signup. Otherwise we cannot properly distinguish which case we are in, and we need different handling of the two cases.

--- a/softwerkskammer/lib/site/views/loginDialog.pug
+++ b/softwerkskammer/lib/site/views/loginDialog.pug
@@ -58,7 +58,7 @@
                         button.btn.btn-primary(type='submit') #{t('authentication.sign_in_button')}
 
               #sign-up-contents.tab-pane.fade
-                form#passwordform-sign-up(action='/auth/login?returnTo=' + encodeURIComponent(returnUrl), method='post')
+                form#passwordform-sign-up(action='/auth/signup?returnTo=' + encodeURIComponent(returnUrl), method='post')
                   input(type='hidden', name='_csrf', value=csrf_token)
                   | #{t('authentication.sign_up_text')}
                   .row
