--- a/softwerkskammer/lib/waitinglist/views/waitinglistTable.pug
+++ b/softwerkskammer/lib/waitinglist/views/waitinglistTable.pug
@@ -44,7 +44,7 @@ block content
                 -count++;
                 -var buttonHref = 'javascript:removeFromWaitinglist(\"' + encodeURIComponent(activity.url()) + '\",\"' + encodeURIComponent(waitinglistEntry.registrantNickname) + '\",\"' + count + '-button\")';
                 tr
-                  td: .checkbox(style='margin-top:0px;margin-bottom:0px;')
+                  td: .checkbox.mt-0.mb-0
                     label
                       input(type='checkbox', name='selectedRow', value=checkboxid)
 
